--- a/catkin_ws/src/control/flat_image/cone_midpoint_control/package.xml
+++ b/catkin_ws/src/control/flat_image/cone_midpoint_control/package.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package format="2">
-  <name>thresholding</name>
+  <name>cone_midpoint_control</name>
   <version>0.0.0</version>
   <description>
-    thresholding package
+    cone_midpoint_control package
   </description>
 
   <license>TODO</license>
   <author>TODO</author>
   <maintainer email="TODO@TODO.com">TODO</maintainer>
 
+  <depend>common_msgs</depend>
   <depend>opencv_msgs</depend>
-  <depend>image_transport</depend>
-  <depend>cv_bridge</depend>
 
   <buildtool_depend>catkin</buildtool_depend>
 </package>
