Restructed catkin_ws

--- a/catkin_ws/src/control/flat_image/cone_bounce_control/CMakeLists.txt
+++ b/catkin_ws/src/control/flat_image/cone_bounce_control/CMakeLists.txt
@@ -5,10 +5,9 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   common_msgs
   common_utilities
+  control_utilities
   opencv_msgs
 )
-
-find_package( OpenCV 3 REQUIRED )
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
@@ -20,5 +19,5 @@ catkin_package(
 )
 
 add_executable(cone_bounce_control src/main.cpp src/controller.cpp)
- target_link_libraries(cone_bounce_control ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
+ target_link_libraries(cone_bounce_control ${catkin_LIBRARIES})
  add_dependencies(cone_bounce_control ${catkin_EXPORTED_TARGETS})
