--- a/catkin_ws/src/control/flat_image/cone_bounce_control/package.xml
+++ b/catkin_ws/src/control/flat_image/cone_bounce_control/package.xml
@@ -13,6 +13,7 @@
   <depend>common_msgs</depend>
   <depend>opencv_msgs</depend>
   <depend>common_utilities</depend>
+  <depend>control_utilities</depend>
 
   <buildtool_depend>catkin</buildtool_depend>
 </package>
