--- a/catkin_ws/src/ch_ros/package.xml
+++ b/catkin_ws/src/ch_ros/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package format="2">
-  <name>cone_midpoint_control</name>
+  <name>ch_ros</name>
   <version>0.0.0</version>
   <description>
-    cone_midpoint_control package
+    ch_ros package
   </description>
 
   <license>TODO</license>
@@ -11,9 +11,9 @@
   <maintainer email="TODO@TODO.com">TODO</maintainer>
 
   <depend>common_msgs</depend>
-  <depend>opencv_msgs</depend>
-  <depend>control_utilities</depend>
-  <depend>common_utilities</depend>
+  <depend>common_srvs</depend>
+  <depend>image_transport</depend>
+
 
   <buildtool_depend>catkin</buildtool_depend>
 </package>
