--- a/catkin_ws/src/control/flat_image/cone_midpoint_control_2/package.xml
+++ b/catkin_ws/src/control/flat_image/cone_midpoint_control_2/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package format="2">
-  <name>cone_midpoint_control</name>
+  <name>cone_midpoint_control_2</name>
   <version>0.0.0</version>
   <description>
-    cone_midpoint_control package
+    cone_midpoint_control_2 package
   </description>
 
   <license>TODO</license>
