I believe I fixed the ArduinoInterface

--- a/catkin_ws/src/control/flat_image/cone_bounce_control/CMakeLists.txt
+++ b/catkin_ws/src/control/flat_image/cone_bounce_control/CMakeLists.txt
@@ -6,7 +6,7 @@ find_package(catkin REQUIRED COMPONENTS
   common_msgs
   common_utilities
   control_utilities
-  opencv_msgs
+  perception_msgs
 )
 
 include_directories(
