--- a/catkin_ws/src/perception/camera/opencv/thresholding/package.xml
+++ b/catkin_ws/src/perception/camera/opencv/thresholding/package.xml
@@ -10,7 +10,7 @@
   <author>TODO</author>
   <maintainer email="TODO@TODO.com">TODO</maintainer>
 
-  <depend>opencv_msgs</depend>
+  <depend>perception_msgs</depend>
   <depend>image_transport</depend>
   <depend>cv_bridge</depend>
 
