--- a/catkin_ws/src/control/flat_image/cone_bounce_control/package.xml
+++ b/catkin_ws/src/control/flat_image/cone_bounce_control/package.xml
@@ -11,7 +11,7 @@
   <maintainer email="TODO@TODO.com">TODO</maintainer>
 
   <depend>common_msgs</depend>
-  <depend>opencv_msgs</depend>
+  <depend>perception_msgs</depend>
   <depend>common_utilities</depend>
   <depend>control_utilities</depend>
 
