--- a/catkin_ws/src/control/flat_image/cone_midpoint_control/CMakeLists.txt
+++ b/catkin_ws/src/control/flat_image/cone_midpoint_control/CMakeLists.txt
@@ -4,7 +4,7 @@ project(cone_midpoint_control)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   common_msgs
-  opencv_msgs
+  perception_msgs
   control_utilities
   common_utilities
 )
