--- a/catkin_ws/src/perception/perception_msgs/CMakeLists.txt
+++ b/catkin_ws/src/perception/perception_msgs/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(opencv_msgs)
+project(perception_msgs)
 
 find_package(catkin REQUIRED COMPONENTS
   roscpp
