--- a/catkin_ws/src/perception/perception_msgs/package.xml
+++ b/catkin_ws/src/perception/perception_msgs/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package format="2">
-  <name>opencv_msgs</name>
+  <name>perception_msgs</name>
   <version>0.0.0</version>
-  <description> opencv_msgs package </description>
+  <description> perception_msgs package </description>
 
   <license>TODO</license>
   <author>TODO</author>
