--- a/catkin_ws/src/perception/camera/point_cloud/cone_detection/CMakeLists.txt
+++ b/catkin_ws/src/perception/camera/point_cloud/cone_detection/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(point_cloud)
+project(pcl_cone_detect)
 
 find_package(catkin REQUIRED COMPONENTS
   roscpp
@@ -18,6 +18,6 @@ catkin_package(
 
 )
 
-add_executable(point_cloud src/main.cpp src/point_cloud_thresholder.cpp)
-target_link_libraries(point_cloud ${catkin_LIBRARIES})
-add_dependencies(point_cloud ${catkin_EXPORTED_TARGETS})
+add_executable(pcl_cone_detect src/main.cpp src/pcl_detector.cpp)
+target_link_libraries(pcl_cone_detect ${catkin_LIBRARIES}) 
+add_dependencies(pcl_cone_detect ${catkin_EXPORTED_TARGETS})
