--- a/catkin_ws/src/drivers/arduino_interface/CMakeLists.txt
+++ b/catkin_ws/src/drivers/arduino_interface/CMakeLists.txt
@@ -23,6 +23,10 @@ add_executable(arduino_interface src/main.cpp src/serial_handler.cpp)
 target_link_libraries(arduino_interface ${catkin_LIBRARIES})
 add_dependencies(arduino_interface ${catkin_EXPORTED_TARGETS})
 
-add_executable(arduino_interface_test src/tester.cpp)
-target_link_libraries(arduino_interface_test ${catkin_LIBRARIES})
-add_dependencies(arduino_interface_test ${catkin_EXPORTED_TARGETS})
+add_executable(arduino_interface_time_tester src/time_tester.cpp)
+target_link_libraries(arduino_interface_time_tester ${catkin_LIBRARIES})
+add_dependencies(arduino_interface_time_tester ${catkin_EXPORTED_TARGETS})
+
+add_executable(arduino_interface_pwm_tester src/pwm_tester.cpp)
+target_link_libraries(arduino_interface_pwm_tester ${catkin_LIBRARIES})
+add_dependencies(arduino_interface_pwm_tester ${catkin_EXPORTED_TARGETS})
