--- a/catkin_ws/src/perception/camera/point_cloud/point_cloud_thresholder/CMakeLists.txt
+++ b/catkin_ws/src/perception/camera/point_cloud/point_cloud_thresholder/CMakeLists.txt
@@ -1,16 +1,17 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(point_cloud_thresholder)
+project(point_cloud_threshold_and_cluster)
 
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   perception_msgs
-  image_transport
+  common_utilities
 )
 
-find_package( OpenCV 3 REQUIRED )
+find_package(PCL 1.2 REQUIRED)
 
 include_directories(
   ${catkin_INCLUDE_DIRS}
+  ${PCL_INCLUDE_DIRS}
   include
 )
 
@@ -18,6 +19,6 @@ catkin_package(
 
 )
 
-add_executable(point_cloud_thresholder src/main.cpp src/point_cloud_thresholder.cpp)
-target_link_libraries(point_cloud_thresholder ${catkin_LIBRARIES})
-add_dependencies(point_cloud_thresholder ${catkin_EXPORTED_TARGETS})
+add_executable(point_cloud_threshold_and_cluster src/main.cpp src/cone_detector.cpp src/thresholder.cpp src/clusterer.cpp)
+target_link_libraries(point_cloud_threshold_and_cluster ${catkin_LIBRARIES})
+add_dependencies(point_cloud_threshold_and_cluster ${catkin_EXPORTED_TARGETS})
