--- a/catkin_ws/src/control/cone_map/circle_through_3_cones/package.xml
+++ b/catkin_ws/src/control/cone_map/circle_through_3_cones/package.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package format="2">
-  <name>point_cloud_thresholder</name>
+  <name>circle_through_3_cones</name>
   <version>0.0.0</version>
   <description>
-    point_cloud_thresholder package
+    circle_through_3_cones package
   </description>
 
   <license>TODO</license>
   <author>TODO</author>
   <maintainer email="TODO@TODO.com">TODO</maintainer>
 
+  <depend>common_msgs</depend>
   <depend>perception_msgs</depend>
-  <depend>visualization_msgs</depend>
+  <depend>control_utilities</depend>
   <depend>common_utilities</depend>
-  <depend>rviz_visual_tools</depend>
 
   <buildtool_depend>catkin</buildtool_depend>
 </package>
