--- a/catkin_ws/src/control/cone_map/odom_local_planner/CMakeLists.txt
+++ b/catkin_ws/src/control/cone_map/odom_local_planner/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(mpc_control)
+project(odom_local_planner)
 
 find_package(catkin REQUIRED COMPONENTS
 	roscpp
@@ -19,6 +19,6 @@ catkin_package(
 
 )
 
-add_executable(mpc_control src/main.cpp src/controller.cpp)
-target_link_libraries(mpc_control ${catkin_LIBRARIES})
-add_dependencies(mpc_controlmpc_control ${catkin_EXPORTED_TARGETS})
+add_executable(odom_local_planner src/main.cpp src/controller.cpp)
+target_link_libraries(odom_local_planner ${catkin_LIBRARIES})
+add_dependencies(odom_local_planner ${catkin_EXPORTED_TARGETS})
